--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"smui-theme": "^7.0.0-beta.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-json-tree": "^1.0.0",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
