--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jsonforms-svelte-test",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"description": "Generate svelte forms from a JSON schema.",
 	"keywords": [
 		"jsonforms",
@@ -38,7 +38,7 @@
 		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark",
 		"docs": "docsify serve docs"
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@material/typography": "^14.0.0",
 		"@smui-extra/autocomplete": "^7.0.0-beta.0",
 		"@smui/checkbox": "^7.0.0-beta.0",
